SERVER-92930: Coordinate values very close to zero avoid undefined down-casting behavior when generating GeoHash (#25531)

GitOrigin-RevId: f9253fc45375b98fb17671d8765246d671eb13db